[tool.poetry]
name = "pubmed-paper-fetcher-pramodini"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with non-academic authors."
authors = ["Your Name <you@example.com>"]
packages = [{ include = "pubmed_paper_fetcher" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
lxml = "^5.1.0"
typer = "^0.9.0"
pandas = "^2.2.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
